# romea-ros2-common

./: .gitlab-ci.yml  AUTHORS  README.md  romea_common.repos  romea_common.rosinstall  romea_common_public.repos
romea_common/: CMakeLists.txt  package.xml
romea_common_bringup/: CMakeLists.txt  README.md  package.xml
romea_common_bringup/launch/: driver.launch.py
romea_common_bringup/python/: romea_common_bringup.py
romea_common_bringup/test/: test_common_bringup.py  test_common_bringup.yaml
romea_common_description/: CMakeLists.txt  README.md  package.xml
romea_common_description/config/: example_of_device_specifications.yaml
romea_common_description/python/: romea_common_description.py
romea_common_description/test/: test_common_bringup.yaml  test_common_description.py  test_common_description2.py
romea_common_description/urdf/: inertia.xacro  test_common_description.py
romea_common_meta_bringup/: CMakeLists.txt  README.md  package.xml
romea_common_meta_bringup/python/: romea_common_meta_bringup.py
romea_common_meta_bringup/romea_common_meta_bringup/: meta_description.py  ros_launch.py  utils.py
romea_common_meta_bringup/src/: urdf_broadcaster.cpp
romea_common_meta_bringup/test/: test_common_meta_bringup.py  test_common_meta_bringup.yaml  test_driver_launch_file_configuration.py  test_driver_launch_file_configuration.yaml  test_driver_launch_file_profile.py  test_driver_launch_file_profile.yaml  test_launch_file.py  test_launch_file.yaml  test_node_profile.py  test_node_profile.yaml
romea_common_msgs/: CMakeLists.txt  README.md  package.xml
romea_common_msgs/msg/: Pose2D.msg  PoseAndTwist2DStamped.msg  Position2D.msg  Position2DStamped.msg  Position3D.msg  Position3DStamped.msg  Twist2D.msg
romea_common_utils/: CMakeLists.txt  README.md  package.xml
romea_common_utils/include/romea_common_utils/: deferred_call.hpp  joint_states.hpp  qos.hpp  ros.hpp  ros_versions.hpp  rviz.hpp  rviz_display.hpp
romea_common_utils/include/romea_common_utils/actions/: action_client_async.hpp  action_client_base.hpp
romea_common_utils/include/romea_common_utils/conversions/: data_serialization.hpp  diagnostic_conversions.hpp  geometry_conversions.hpp  pose2d_conversions.hpp  pose3d_conversions.hpp  pose_and_twist2d_conversions.hpp  pose_and_twist3d_conversions.hpp  position2d_conversions.hpp  position3d_conversions.hpp  time_conversions.hpp  transform_conversions.hpp  twist2d_conversions.hpp  twist3d_Conversions.hpp  twist3d_conversions.hpp
romea_common_utils/include/romea_common_utils/listeners/: data_listener.hpp  stamped_data_listener.hpp
romea_common_utils/include/romea_common_utils/params/: RosParam.hpp  algorithm_parameters.hpp  control_parameters.hpp  eigen_parameters.hpp  geodesy_parameters.hpp  node_parameters.hpp  sensor_parameters.hpp
romea_common_utils/include/romea_common_utils/publishers/: data_publisher.hpp  diagnostic_publisher.hpp  message_publisher.hpp  odom_publisher.hpp  publisher.hpp  publisher_base.hpp  stamped_data_publisher.hpp  stamped_message_publisher.hpp  stamped_publisher.hpp  transform_publisher.hpp
romea_common_utils/include/romea_common_utils/realtime_publishers/: data_publisher.hpp  message_publisher.hpp  stamped_data_publisher.hpp  stamped_message_publisher.hpp
romea_common_utils/include/romea_common_utils/services/: service_client_async.hpp
romea_common_utils/src/: joint_states.cpp  qos.cpp  rviz.cpp  rviz_display.cpp
romea_common_utils/src/conversions/: diagnostic_conversions.cpp  geometry_conversions.cpp  pose2d_conversions.cpp  pose3d_conversions.cpp  pose_and_twist2d_conversions.cpp  pose_and_twist3d_conversions.cpp  position2d_conversions.cpp  position3d_conversions.cpp  time_conversions.cpp  transform_conversions.cpp  twist2d_conversions.cpp  twist3d_conversions.cpp
romea_common_utils/src/params/: geodesy_parameters.cpp
romea_common_utils/test/: CMakeLists.txt  params.yaml  test_lifecycle_node_parameters.cpp  test_lifecycle_node_publisher.cpp  test_node_parameters.cpp  test_node_parameters.yaml  test_node_publisher.cpp  test_node_publisher_utils.hpp  test_pose2d_conversions.cpp  test_pose3d_conversions.cpp  test_position2d_conversions.cpp  test_position3d_conversions.cpp  test_ros_conversions.cpp  test_ros_param_test.cpp  test_ros_params.cpp  test_ros_params.yaml  test_ros_publisher.cpp  test_ros_publisher_utils.hpp  test_ros_transform.cpp  test_ros_transform_test.cpp  test_twist2d_conversions.cpp  test_twist3d_conversions.cpp  test_utils.hpp
