<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_common_utils</name>
  <version>0.0.0</version>
  <description>Package romea_common_utils description</description>
  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>romea_core_common</depend>
  <depend>romea_common_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>rviz_visual_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

<!--<?xml version="1.0"?>-->
<!--<package format="2">-->
<!--  <name>romea_common_utils</name>-->
<!--  <version>0.0.0</version>-->
<!--  <description>The romea_common utils package</description>-->

<!--  <author email="jean.laneurit@inrae.fr">Jean Laneurit</author>-->
<!--  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>-->


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
<!--  <license>TODO</license>-->
<!--  <buildtool_depend>catkin</buildtool_depend>-->
<!--  <depend>roscpp</depend>-->
<!--  <depend>romea_common</depend>-->
<!--  <depend>diagnostic_updater</depend>-->
<!--  <depend>nav_msgs</depend>-->
<!--  <depend>tf2_ros</depend>-->
<!--  <depend>tf2_eigen</depend>-->

<!--</package>-->
